fix and comment DoanhThuTheoNgay