@@ -1,27 +1,36 @@
 package vn.ptit.restaurant.service.impl;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import vn.ptit.restaurant.dto.request.HoaDonSearchRequest;
 import vn.ptit.restaurant.dto.request.TaoHoaDonRequest;
 import vn.ptit.restaurant.dto.response.HoaDonResponse;
 import vn.ptit.restaurant.dto.response.PageResponse;
-import vn.ptit.restaurant.entity.*;
+import vn.ptit.restaurant.entity.BanAn;
+import vn.ptit.restaurant.entity.ChiTietHoaDon;
+import vn.ptit.restaurant.entity.HoaDon;
+import vn.ptit.restaurant.entity.MonAn;
+import vn.ptit.restaurant.entity.id.ChiTietHoaDonId;
 import vn.ptit.restaurant.exception.NotFoundException;
-import vn.ptit.restaurant.repository.*;
+import vn.ptit.restaurant.repository.BanAnRepository;
+import vn.ptit.restaurant.repository.ChiTietHoaDonRepository;
+import vn.ptit.restaurant.repository.HoaDonRepository;
+import vn.ptit.restaurant.repository.MonAnRepository;
 import vn.ptit.restaurant.service.HoaDonService;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import javax.persistence.criteria.Predicate;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,6 +40,7 @@ public class HoaDonServiceImpl implements HoaDonService {
     private final HoaDonRepository hoaDonRepository;
     private final BanAnRepository banAnRepository;
     private final MonAnRepository monAnRepository;
+    private final ChiTietHoaDonRepository chiTietHoaDonRepository;
 
     @Override
     public HoaDonResponse taoHoaDon(TaoHoaDonRequest request) {
@@ -38,47 +48,81 @@ public class HoaDonServiceImpl implements HoaDonService {
         BanAn banAn = banAnRepository.findById(request.getBanId())
                 .orElseThrow(() -> new NotFoundException("Không tìm thấy bàn"));
 
-        List<MonAn> monAns = monAnRepository.findAllById(request.getChiTietList());
+        // 2️⃣ Lấy danh sách id món ăn
+        List<String> monAnIds = request.getChiTietList()
+                .stream()
+                .map(TaoHoaDonRequest.ChiTietRequest::getMonAnId)
+                .collect(Collectors.toList());
 
+        // 3️⃣ Query tất cả món ăn
+        List<MonAn> monAns = monAnRepository.findAllById(monAnIds);
 
-        if (monAn.isEmpty()) {
-            throw new NotFoundException("Danh sách món không hợp lệ");
-        }
+        // Map để tìm nhanh theo id
+        Map<String, MonAn> monAnMap = monAns.stream()
+                .collect(Collectors.toMap(MonAn::getMaMon, m -> m));
 
-        BigDecimal tongTien = monAn.stream()
-                .map(MonAn::getDonGia)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        HoaDon hoaDon = new HoaDon();
-        hoaDon.setMaHoaDon("HD-" + System.currentTimeMillis());
-        hoaDon.setTrangThai(HoaDon.TrangThaiHoaDon.NEW);
-        hoaDon.setNgayLap(LocalDateTime.now());
-        hoaDon.setTongTien(tongTien);
-        hoaDon.setBanAn(banAn);
+        // 4️⃣ Tạo hóa đơn
+        HoaDon hoaDon = HoaDon.builder()
+                .maHoaDon("HD-" + System.currentTimeMillis())
+                .trangThai(HoaDon.TrangThaiHoaDon.NEW)
+                .ngayLap(LocalDateTime.now())
+                .banAn(banAn)
+                .tongTien(BigDecimal.ZERO)
+                .build();
 
         hoaDonRepository.save(hoaDon);
 
-        // 🔥 AUTO UPDATE TRẠNG THÁI BÀN
-        banAn.setTrangThai(banAn.TrangThaiBan.OCCUPIED);
+        BigDecimal tongTien = BigDecimal.ZERO;
 
-        return HoaDonResponse.builder()
-                .id(hoaDon.getId())
-                .maHoaDon(hoaDon.getMaHoaDon())
-                .tongTien(tongTien)
-                .trangThai(hoaDon.getTrangThai().name())
-                .build();
+        // 5️⃣ Tạo chi tiết hóa đơn
+        for (TaoHoaDonRequest.ChiTietRequest ct : request.getChiTietList()) {
+
+            MonAn monAn = monAnMap.get(ct.getMonAnId());
+
+            if (monAn == null) {
+                throw new RuntimeException("Món ăn không tồn tại: " + ct.getMonAnId());
+            }
+
+            BigDecimal thanhTien = monAn.getDonGia()
+                    .multiply(BigDecimal.valueOf(ct.getSoLuong()));
+
+            ChiTietHoaDonId id = new ChiTietHoaDonId(
+                    hoaDon.getMaHoaDon(),
+                    monAn.getMaMon()
+            );
+            ChiTietHoaDon chiTiet = ChiTietHoaDon.builder()
+                    .id(id)
+                    .hoaDon(hoaDon)
+                    .monAn(monAn)
+                    .soLuong(ct.getSoLuong())
+                    .donGia(monAn.getDonGia())
+//                    .thanhTien(thanhTien)
+                    .build();
+
+            chiTietHoaDonRepository.save(chiTiet);
+
+            tongTien = tongTien.add(thanhTien);
+        }
+
+        // 6️⃣ Update tổng tiền
+        hoaDon.setTongTien(tongTien);
+        hoaDonRepository.save(hoaDon);
+
+        // update bàn
+        banAn.setTrangThai(BanAn.TrangThaiBan.OCCUPIED);
+
+        return mapToResponse(hoaDon);
     }
 
     @Override
-    public void thanhToan(Long hoaDonId) {
+    public void thanhToan(String maHoaDon) {
 
-        HoaDon hoaDon = hoaDonRepository.findById(hoaDonId)
+        HoaDon hoaDon = hoaDonRepository.findById(maHoaDon)
                 .orElseThrow(() -> new NotFoundException("Không tìm thấy hóa đơn"));
 
         hoaDon.setTrangThai(HoaDon.TrangThaiHoaDon.PAID);
 
-        // 🔥 TỰ ĐỘNG TRẢ BÀN
-        hoaDon.getBanAn().setTrangThai(banAnRepository.TrangThaiBan.AVAILABLE);
+        hoaDon.getBanAn().setTrangThai(BanAn.TrangThaiBan.AVAILABLE);
     }
 
     @Override
@@ -90,11 +134,11 @@ public class HoaDonServiceImpl implements HoaDonService {
             List<Predicate> predicates = new ArrayList<>();
 
             if (request.getId() != null) {
-                predicates.add(cb.equal(root.get("id"), request.getId()));
+                predicates.add(cb.equal(root.get("maHoaDon"), request.getId()));
             }
 
             if (request.getBanId() != null) {
-                predicates.add(cb.equal(root.get("banAn").get("id"), request.getBanId()));
+                predicates.add(cb.equal(root.get("banAn").get("maBan"), request.getBanId()));
             }
 
             if (request.getTrangThai() != null) {
@@ -103,7 +147,7 @@ public class HoaDonServiceImpl implements HoaDonService {
 
             if (request.getTuNgay() != null && request.getDenNgay() != null) {
                 predicates.add(cb.between(
-                        root.get("thoiGianTao"),
+                        root.get("ngayLap"),
                         request.getTuNgay(),
                         request.getDenNgay()
                 ));
@@ -128,14 +172,10 @@ public class HoaDonServiceImpl implements HoaDonService {
 
         Page<HoaDon> pageResult = hoaDonRepository.findAll(specification, pageable);
 
-        List<HoaDonResponse> content = pageResult.getContent().stream()
-                .map(h -> HoaDonResponse.builder()
-                        .id(h.getMaHoaDon())
-                        .banId(h.getBan().getId())
-                        .tongTien(h.getTongTien())
-                        .thoiGianTao(h.getThoiGianTao())
-                        .build())
-                .toList();
+        List<HoaDonResponse> content = pageResult.getContent()
+                .stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
 
         return PageResponse.<HoaDonResponse>builder()
                 .content(content)
@@ -144,5 +184,13 @@ public class HoaDonServiceImpl implements HoaDonService {
                 .totalElements(pageResult.getTotalElements())
                 .totalPages(pageResult.getTotalPages())
                 .build();
+    }
+
+    private HoaDonResponse mapToResponse(HoaDon h) {
+        HoaDonResponse response = new HoaDonResponse();
+        response.setMaHoaDon(h.getMaHoaDon());
+        response.setTrangThai(h.getTrangThai().name());
+        response.setTongTien(h.getTongTien());
+        return response;
     }
 }
